<resources>
    <string name="app_name">Tailorapp</string>
    <string name="username">Username</string>
    <string name="tailoringapp">TailoringApp</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_nav">nav_activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Deepali Sawant</string>
    <string name="nav_header_subtitle">deepalipophale22_gmail_com</string>
    <string name="nav_header_desc">Deepa Creations</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_customer">Customer</string>
    <string name="menu_order">Order</string>
    <string name="menu_receipt">Receipt</string>
    <string name="menu_logout">Logout</string>
    <string name="name">Name</string>
    <string name="phoneno">PhoneNo.</string>
    <string name="email_id">Email Id</string>
    <string name="order">Order</string>
    <string name="customer_details">Customer Details</string>
    <string name="addcustomer">addcustomer</string>
    <string name="user_name">User Name</string>
    <string name="phonenumber">phoneNumber</string>
    <string name="email">email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="addcust">AddCustomer</string>
    <string name="addorder">AddOrder</string>
    <string name="add_customer">Add Customer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>