<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.tailorapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

<!--    <fragment-->
<!--        android:id="@+id/nav_gallery"-->
<!--        android:name="com.tailorapp.ui.gallery.GalleryFragment"-->
<!--        android:label="@string/menu_gallery"-->
<!--        tools:layout="@layout/fragment_gallery" />-->

<!--    <fragment-->
<!--        android:id="@+id/nav_Camera"-->
<!--        android:name="com.tailorapp.ui.camera.CameraFragment"-->
<!--        android:label="@string/menu_camera"-->
<!--        tools:layout="@layout/fragment_camera" />-->
    <fragment
        android:id="@+id/nav_Customer"
        android:name="com.tailorapp.ui.customer.CustomerFragment"
        android:label="@string/menu_customer"
        tools:layout="@layout/fragment_customer" />
    <fragment
        android:id="@+id/nav_Order"
        android:name="com.tailorapp.ui.order.OrderFragment"
        android:label="@string/menu_order"
        tools:layout="@layout/fragment_order" />
    <fragment
        android:id="@+id/nav_Receipt"
        android:name="com.tailorapp.ui.receipt.ReceiptFragment"
        android:label="@string/menu_receipt"
        tools:layout="@layout/fragment_receipt" />


</navigation>