<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/singlerow"
        android:layout_width="396dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:background="@drawable/gradient_background"
        android:elevation="4dp"
        app:cardCornerRadius="6dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/custom_button"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:id="@+id/diplayname"
                android:layout_width="300sp"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textColor="@color/black"
                android:textSize="@dimen/activity_horizontal_margin"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/diplayphoneNumber"
                android:layout_width="300sp"
                android:layout_height="wrap_content"
                android:text="@string/phonenumber"
                android:textColor="@color/black"
                android:textSize="@dimen/activity_horizontal_margin"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/diplayemail"
                android:layout_width="300sp"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="@dimen/activity_horizontal_margin"
                android:textStyle="bold" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>